# telos

./: .bazelrc  .gitignore  BUILD.bazel  CONTROLLER_DESIGN.md  LICENSE  MODULE.bazel  README.md  SCBENCH_REPORT_05_21.md  SPEC.md  go.mod  go.sum
cmd/telos/: BUILD.bazel  analyze.go  cloud_sessions.go  config.go  config_test.go  configure.go  controller_context.go  delete.go  describe.go  display.go  flags.go  flags_test.go  hosted_sessions.go  inspect_child.go  launch.go  list.go  list_test.go  login.go  login_test.go  logout.go  logout_test.go  logs.go  main.go  main_test.go  open.go  org.go  output.go  output_test.go  plan.go  push.go  registry_skills.go  registry_skills_test.go  replay.go  root_context.go  serve.go  session_helpers.go  stop.go  testfake_integration_test.go  usage.go  usage_test.go  (+1 more)
cmd/telosd/: BUILD.bazel  main.go  main_test.go
internal/agentsession/: BUILD.bazel  protocol.go  protocol_test.go
internal/agentsession/testdata/: protocol_events.golden.jsonl
internal/cli/: BUILD.bazel  agent_executor_default.go  agent_executor_testfake.go  localrun.go  localrun_test.go  workspace.go  workspace_test.go
internal/cloud/: BUILD.bazel  account.go  account_test.go  cliauth.go  cliauth_test.go  client.go  client_test.go
internal/config/: BUILD.bazel  config.go  config_test.go
internal/envutil/: BUILD.bazel  envutil.go  envutil_test.go
internal/evidence/: BUILD.bazel  evidence.go  evidence_test.go
internal/executor/: BUILD.bazel  bash.go  bifrost_routing.go  bifrost_routing_test.go  compactor.go  compactor_test.go  completion_gate.go  containment.go  conversation_state.go  conversation_state_test.go  dispatch.go  errors.go  executor.go  file_tracker.go  fileio.go  httpclient.go  knobs.go  loop.go  native.go  native_test.go  native_tools_test.go  patch.go  pi.go  pi_test.go  provider.go  provider_adapters.go  provider_adapters_test.go  redaction.go  registry.go  replay.go  responses.go  responses_compaction_test.go  sanitize.go  search.go  session.go  session_test.go  sessionlog.go  skills.go  table.go  terminal_state.go  (+10 more)
internal/executor/pi_extensions/: telos_bifrost.ts
internal/executor/providercore/: BUILD.bazel  collector.go  collector_test.go  types.go
internal/game/: BUILD.bazel  ledger.go  pvg.go  pvg_test.go  review.go  review_test.go  roles.go  state.go  state_test.go  task_state_machine.go  task_state_machine_test.go  transcript.go  transcript_test.go  types.go  types_test.go
internal/gateway/: BUILD.bazel  gateway.go  gateway_test.go
internal/gatewaycred/: BUILD.bazel  gatewaycred.go  gatewaycred_test.go
internal/hosted/: BUILD.bazel  client.go  client_test.go
internal/ledger/: BUILD.bazel  ledger.go  ledger_test.go
internal/local/: BUILD.bazel  client.go  client_test.go  daemon.go  daemon_test.go  paths.go  paths_test.go  platform.go  platform_test.go  process.go
internal/oauthcred/: BUILD.bazel  oauthcred.go  oauthcred_test.go
internal/platform/: BUILD.bazel  platform.go  platform_test.go
internal/protocol/: BUILD.bazel  protocol.go  protocol_test.go
internal/runtimeclient/: BUILD.bazel  client.go  client_test.go
internal/sessionapi/: BUILD.bazel  analysis.go  auth.go  diagnostics.go  durable.go  hardening_test.go  manifest.go  protocol_stream.go  server.go  server_test.go  store.go  store_events.go  store_test.go  token_index.go  types.go  types_test.go
internal/sessionrun/: BUILD.bazel  agent_executor_default.go  agent_executor_testfake.go  localrun.go  workspace.go
internal/sessionupdate/: BUILD.bazel  projection.go
internal/spec/: BUILD.bazel  compile.go  compile_test.go  digest.go  embed.go  package.go  package_test.go  registry.go  registry_test.go  render.go  skills.go  skills_test.go  spec.go  spec_test.go
internal/spec/prompts/: controller.md  prover.md  verifier.md
internal/spec/prompts/preamble/: cloud.md  local.md
internal/spec/skills/analyze-runs/: SKILL.md
internal/spec/skills/backend-design/: SKILL.md
internal/spec/skills/build-dashboard/: SKILL.md
internal/spec/skills/cache-resp/: SKILL.md
internal/spec/skills/database-ferretdb/: SKILL.md
internal/spec/skills/database-sql/: SKILL.md
internal/spec/skills/k8s-deploy/: SKILL.md
internal/spec/skills/k8s-fault-admission/: SKILL.md
internal/spec/skills/k8s-fault-disk/: SKILL.md
internal/spec/skills/k8s-fault-infra/: SKILL.md
internal/spec/skills/k8s-fault-network/: SKILL.md
internal/spec/skills/k8s-fault-process/: SKILL.md
internal/spec/skills/k8s-fault-runtime/: SKILL.md
internal/spec/skills/k8s-fault-scheduling/: SKILL.md
internal/spec/skills/k8s-fault-storage/: SKILL.md
internal/spec/skills/k8s-troubleshoot/: SKILL.md
internal/spec/skills/keycloak-admin/: SKILL.md
internal/spec/skills/observability/: SKILL.md
internal/spec/skills/oci-build/: SKILL.md
internal/spec/skills/policy-audit/: SKILL.md
internal/spec/skills/policy-backup-restore/: SKILL.md
internal/spec/skills/policy-encryption/: SKILL.md
internal/spec/skills/queue-kafka/: SKILL.md
internal/spec/skills/search-opensearch/: SKILL.md
internal/spec/skills/secret-mgr-vault/: SKILL.md
internal/spec/skills/task-promotion/: SKILL.md
internal/spec/skills/telos-operator/: SKILL.md
internal/spec/skills/telos-orchestrate/: SKILL.md
internal/telosd/: BUILD.bazel  cloud_store.go  cloud_store_test.go  config.go  config_test.go  control_client.go  control_reconciler.go  control_reconciler_test.go  controller_reconciler.go  controller_reconciler_test.go  deployment_bootstrap.go  deployment_bootstrap_test.go  kubernetes_client.go  kubernetes_worker.go  kubernetes_worker_test.go  local_process_worker.go  local_process_worker_test.go  namespace_policy.go  package_materializer.go  package_materializer_test.go  reconcile_retry.go  route_handles.go  route_handles_test.go  route_reconciler.go  route_reconciler_test.go  server.go  server_test.go  session_bootstrap.go  session_bootstrap_test.go  session_worker_helpers.go  spec_update_projection.go  surface_gateway.go  surface_gateway_test.go  topology.go  topology_test.go  worker.go  worker_test.go
(+49 files in other folders)
