load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library", "go_test")

go_library(
    name = "telosd_lib",
    srcs = ["main.go"],
    importpath = "github.com/telos-org/telos-go/cmd/telosd",
    visibility = ["//visibility:private"],
    deps = ["//internal/telosd"],
)

go_test(
    name = "telosd_main_test",
    srcs = ["main_test.go"],
    embed = [":telosd_lib"],
)

go_binary(
    name = "telosd",
    embed = [":telosd_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/telos-org/telos-go/cmd/telosd.Version": "{STABLE_TELOS_VERSION}",
    },
)

go_cross_binary(
    name = "telosd_darwin_amd64",
    platform = "@rules_go//go/toolchain:darwin_amd64",
    target = ":telosd",
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "telosd_darwin_arm64",
    platform = "@rules_go//go/toolchain:darwin_arm64",
    target = ":telosd",
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "telosd_linux_amd64",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":telosd",
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "telosd_linux_arm64",
    platform = "@rules_go//go/toolchain:linux_arm64",
    target = ":telosd",
    visibility = ["//visibility:public"],
)
