load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cli",
    srcs = [
        "agent_executor_default.go",
        "agent_executor_testfake.go",
        "localrun.go",
        "workspace.go",
    ],
    importpath = "github.com/telos-org/telos/internal/cli",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/executor",
        "//internal/game",
        "//internal/platform",
        "//internal/sessionapi",
        "//internal/spec",
    ],
)

go_test(
    name = "cli_test",
    srcs = [
        "localrun_test.go",
        "workspace_test.go",
    ],
    embed = [":cli"],
    deps = [
        "//internal/game",
        "//internal/platform",
        "//internal/sessionapi",
    ],
)
