load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cloud",
    srcs = ["client.go"],
    importpath = "github.com/telos-org/telos-go/internal/cloud",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/sessionapi",
    ],
)

go_test(
    name = "cloud_test",
    srcs = ["client_test.go"],
    embed = [":cloud"],
    deps = ["//internal/sessionapi"],
)
