load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cloud",
    srcs = [
        "account.go",
        "cliauth.go",
        "client.go",
    ],
    importpath = "github.com/telos-org/telos/internal/cloud",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/sessionapi",
    ],
)

go_test(
    name = "cloud_test",
    srcs = [
        "account_test.go",
        "cliauth_test.go",
        "client_test.go",
    ],
    embed = [":cloud"],
    deps = [
        "//internal/config",
        "//internal/sessionapi",
    ],
)
