load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "evidence",
    srcs = ["evidence.go"],
    importpath = "github.com/telos-org/telos-go/internal/evidence",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "evidence_test",
    srcs = ["evidence_test.go"],
    embed = [":evidence"],
)
