load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "executor",
    srcs = [
        "bifrost_routing.go",
        "compactor.go",
        "containment.go",
        "conversation_state.go",
        "bash.go",
        "dispatch.go",
        "errors.go",
        "executor.go",
        "file_tracker.go",
        "fileio.go",
        "knobs.go",
        "loop.go",
        "patch.go",
        "provider_adapters.go",
        "provider.go",
        "redaction.go",
        "registry.go",
        "replay.go",
        "responses.go",
        "sanitize.go",
        "search.go",
        "sessionlog.go",
        "skills.go",
        "table.go",
        "terminal_state.go",
        "textutil.go",
        "tokens.go",
        "tools.go",
        "workspace_scope.go",
    ],
    embedsrcs = ["assets/cl100k_base.tiktoken.gz"],
    importpath = "github.com/telos-org/telos/internal/executor",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/agentsession",
        "//internal/config",
        "//internal/envutil",
        "//internal/executor/providercore",
        "//internal/game",
        "//internal/gatewaycred",
        "//internal/oauthcred",
        "//internal/platform",
        "//internal/protocol",
        "//internal/sessionapi",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@com_github_openai_openai_go//:openai-go",
        "@com_github_openai_openai_go//option",
        "@com_github_openai_openai_go//responses",
        "@com_github_pkoukk_tiktoken_go//:tiktoken-go",
    ],
)

go_test(
    name = "executor_test",
    srcs = [
        "compactor_test.go",
        "conversation_state_test.go",
        "native_test.go",
        "native_tools_test.go",
        "provider_adapters_test.go",
        "responses_compaction_test.go",
        "tokens_bench_test.go",
        "tokens_test.go",
    ],
    embed = [":executor"],
    deps = [
        "//internal/agentsession",
        "//internal/config",
        "//internal/executor/providercore",
        "//internal/game",
        "//internal/gatewaycred",
        "//internal/oauthcred",
        "//internal/platform",
        "//internal/protocol",
        "@com_github_openai_openai_go//responses",
    ],
)
