load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "game",
    srcs = [
        "ledger.go",
        "pvg.go",
        "review.go",
        "roles.go",
        "state.go",
        "task_state_machine.go",
        "transcript.go",
        "types.go",
    ],
    importpath = "github.com/telos-org/telos/internal/game",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/evidence",
        "//internal/platform",
        "//internal/spec",
    ],
)

go_test(
    name = "game_test",
    srcs = [
        "pvg_test.go",
        "review_test.go",
        "state_test.go",
        "task_state_machine_test.go",
        "transcript_test.go",
        "types_test.go",
    ],
    embed = [":game"],
    deps = [
        "//internal/platform",
        "//internal/spec",
    ],
)
