load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "oauthcred",
    srcs = ["oauthcred.go"],
    importpath = "github.com/telos-org/telos/internal/oauthcred",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "oauthcred_test",
    srcs = ["oauthcred_test.go"],
    embed = [":oauthcred"],
)
