load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "protocol",
    srcs = ["protocol.go"],
    importpath = "github.com/telos-org/telos/internal/protocol",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "protocol_test",
    srcs = ["protocol_test.go"],
    embed = [":protocol"],
)
