load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sessionapi",
    srcs = [
        "auth.go",
        "manifest.go",
        "server.go",
        "store.go",
        "types.go",
    ],
    importpath = "github.com/telos-org/telos/internal/sessionapi",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/spec"],
)

go_test(
    name = "sessionapi_test",
    srcs = [
        "server_test.go",
        "types_test.go",
    ],
    deps = [
        ":sessionapi",
        "//internal/spec",
    ],
)
