load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sessionapi",
    srcs = [
        "analysis.go",
        "auth.go",
        "diagnostics.go",
        "durable.go",
        "manifest.go",
        "protocol_stream.go",
        "server.go",
        "store.go",
        "store_events.go",
        "token_index.go",
        "types.go",
    ],
    importpath = "github.com/telos-org/telos/internal/sessionapi",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/agentsession",
        "//internal/spec",
    ],
)

go_test(
    name = "sessionapi_test",
    srcs = [
        "server_test.go",
        "hardening_test.go",
        "store_test.go",
        "types_test.go",
    ],
    embed = [":sessionapi"],
    deps = [
        "//internal/agentsession",
        "//internal/game",
        "//internal/spec",
    ],
)
