load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "spec",
    srcs = [
        "compile.go",
        "digest.go",
        "embed.go",
        "render.go",
        "skills.go",
        "spec.go",
    ],
    embedsrcs = glob([
        "prompts/**/*.md",
        "skills/**",
    ]),
    importpath = "github.com/telos-org/telos/internal/spec",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/platform",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "spec_test",
    srcs = [
        "compile_test.go",
        "skills_test.go",
        "spec_test.go",
    ],
    embed = [":spec"],
    deps = ["//internal/platform"],
)
