load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "telosd",
    srcs = [
        "cloud_store.go",
        "config.go",
        "deployment_bootstrap.go",
        "kubernetes_worker.go",
        "local_process_worker.go",
        "route_reconciler.go",
        "route_handles.go",
        "server.go",
        "surface_gateway.go",
        "topology.go",
        "worker.go",
    ],
    importpath = "github.com/telos-org/telos/internal/telosd",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cli",
        "//internal/game",
        "//internal/sessionapi",
        "//internal/sessionworker",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//batch/v1:batch",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//networking/v1:networking",
        "@io_k8s_api//rbac/v1:rbac",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/util/intstr",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/clientcmd",
    ],
)

go_test(
    name = "telosd_test",
    srcs = [
        "config_test.go",
        "deployment_bootstrap_test.go",
        "kubernetes_worker_test.go",
        "route_reconciler_test.go",
        "route_handles_test.go",
        "server_test.go",
        "surface_gateway_test.go",
        "topology_test.go",
        "worker_test.go",
    ],
    embed = [":telosd"],
    deps = [
        "//internal/sessionapi",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_api//apps/v1:apps",
        "@io_k8s_api//rbac/v1:rbac",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_client_go//kubernetes/fake",
        "@io_k8s_client_go//testing",
    ],
)
