load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "telosd",
    srcs = [
        "cloud_store.go",
        "config.go",
        "local_process_worker.go",
        "package_materializer.go",
        "server.go",
        "session_bootstrap.go",
        "spec_update_projection.go",
        "session_worker_helpers.go",
        "worker.go",
    ],
    importpath = "github.com/telos-org/telos/internal/telosd",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cli",
        "//internal/evidence",
        "//internal/game",
        "//internal/sessionapi",
        "//internal/sessionworker",
        "//internal/spec",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "telosd_test",
    srcs = [
        "cloud_store_test.go",
        "config_test.go",
        "package_materializer_test.go",
        "server_test.go",
        "session_bootstrap_test.go",
        "worker_test.go",
    ],
    embed = [":telosd"],
    deps = [
        "//internal/sessionapi",
        "//internal/spec",
    ],
)
